# project-codeguard

./: mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: update-codeguard-rules.yml  validate-rules.yml
docs/: claude-code-skill-plugin.md  codeguard-reviewer.md  faq.md  getting-started.md  index.md  install-paths.md  mcp-server.md  skills.md
skills/codeguard/: SKILL.md
skills/codeguard/rules/: codeguard-0-additional-cryptography.md  codeguard-0-iac-security.md  codeguard-0-logging.md
skills/software-security/: SKILL.md
skills/software-security/rules/: codeguard-0-api-web-services.md  codeguard-0-authentication-mfa.md  codeguard-0-client-side-web-security.md  codeguard-0-cloud-orchestration-kubernetes.md  codeguard-0-data-storage.md  codeguard-0-devops-ci-cd-containers.md  codeguard-0-iac-security.md  codeguard-0-input-validation-injection.md  codeguard-0-privacy-data-protection.md  codeguard-0-session-management-and-cookies.md  codeguard-1-digital-certificates.md  codeguard-1-hardcoded-credentials.md
sources/rules/core/: codeguard-0-iac-security.md  codeguard-SKILLS.md.template
src/: artifact_targets.py  convert_to_ide_formats.py  converter.py  language_mappings.py  validate_versions.py
src/codeguard-mcp/: pyproject.toml
src/formats/: agentskills.py  antigravity.py  base.py  claude.py  codex.py  copilot.py  cursor.py  hermes.py  openclaw.py  opencode.py  windsurf.py
