[project]
name = "project-codeguard"
version = "1.3.1"
description = "AI Coding Rules for Security and Best Practices"
requires-python = ">=3.11"
dependencies = [
    "pyyaml~=6.0.2",
    "mkdocs~=1.6.1",
    "mkdocs-material~=9.6.21",
]

[tool.uv]
# CVE floors for transitive deps
constraint-dependencies = [
    "urllib3>=2.7.0",
    "requests>=2.33.0",
    "pygments>=2.20.0",
    "idna>=3.15",
    "pymdown-extensions>=10.21.3",
]
# Supply-chain cooldown
exclude-newer = "7 days"
